@@ -6,17 +6,19 @@ x. # sign
 x. load params file
 x. Pulsar support
 x. Spacecraft support
-6. Handle files (i.e., not Mark5 modules)
+x. Handle files (i.e., not Mark5 modules)
 7. Handle multiple phase centers
 x. full paths to files
 x. guardblocks, blocks per send
 10. what to do about modes that don't support all antennas? (c081a.skd currently fails)
 	- Adam suggests populating a bogus datastream entry with no corresponding baselines
-11. support mark5b
+x. support mark5b
 12. support VDIF
 x. support baselines=
 x. implement maxLength
 x. use antennas, not modules, in antenna count
+16. support time formats other than mjd
+
 
 Concerns outside vex2difx proper
 
